# dedup_pca

./: .gitignore  .tool-versions  README.md  add_comma_between_hashes.py  dedup_embeddings_pca.ipynb  ipca_on_embeddings.py  json_embedding_parser.py  main.py  marcxml_embedding_parser.py  pca_on_embeddings.py  pca_on_embeddings_experiments.py  pca_on_similarities.py  pyproject.toml  sample_embeddings_matrix.py  similarities_matrix.csv
.ipynb_checkpoints/: dedup_embeddings_pca-checkpoint.ipynb  ipca_on_embeddings-checkpoint.py  json_embedding_parser-checkpoint.py  marcxml_embedding_parser-checkpoint.py  pca_on_similarities-checkpoint.py
data_marcxml/extracted/: incremental_46370036360006421_20260305_020345[024]_new.xml
embeddings_matrix/: embeddings_batch_1_marcxml_matrix.csv
